Fix modal header width on tablet

--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -114,6 +114,10 @@
   color: $primaryColor;
 
   @include mq(tablet) {
+    width: 320px;
+    margin-left: auto;
+    margin-right: auto;
+
     font-size: 20px;
     line-height: 1.4;
   }
